--- a/Couette.tex
+++ b/Couette.tex
@@ -1,7 +1,9 @@
 \section{Couette flow}
+\label{sec:Couette}
 
+\index{Couette flow}
 As a simple solution, let us derive the flow that was given as an
-example in our derivation of section \ref{sec:}. A plane moves in the
+example in our derivation of section \ref{sec:Newtonian}. A plane moves in the
 $x$ direction, parallel of a fixed plane, and separated a distance $L$
 from it. The velocity field is supposed to depend only on $y$ and have
 reached a steady state. (Notice that these assumptions restrict our
@@ -235,11 +237,12 @@ or
  -4  \frac{ \mu \bar{u}^2 }{ k T_0 }  =
  -4 \mathrm{Br} ,
 \]
-where we define the important Brinkman number:
-\[
-\mathrm{Br} =
-\frac{ \mu \bar{u}^2 }{ k T_0 } .
-\]
+where we define the important Brinkman number: \index{Brinkman number}
+\begin{equation}
+  \label{eq:Brinkman}
+  \mathrm{Br} =
+  \frac{ \mu \bar{u}^2 }{ k T_0 } .
+\end{equation}
 
 The number measures the importance of viscous dissipation over
 temperature dissipation.
