--- a/NS_exercises.tex
+++ b/NS_exercises.tex
@@ -1,5 +1,21 @@
 \section{Exercises}
 
-Check that $\mu /( \rho_ 0 L u_0)$ is indeed dimensionless.
+\begin{enumerate}
+\item \label{ex:dOmega_LC}
+  Cast Eq. \ref{eq:dOmega_as_grad_u} as
+  \[
+    \frac{d\Omega_{k}}{dt} = \frac12 \epsilon_{ijk}
+    \left[
+      (\nabla \bfu)_{ij} -
+      (\nabla \bfu)_{ji}
+    \right] ,
+  \]
+  where summation over repeated indices is implicit (Einstein's
+  convention) \index{Einstein's convention}, and $\epsilon$ is the
+  Levi-Civita symbol, see Exercise \ref{ex:vector_identity} of Section
+  \ref{sec:Euler_exercises}.
+
+\item Check that $\mu /( \rho_ 0 L u_0)$ is indeed dimensionless.
+\end{enumerate}
 
 
