--- a/Poiseuille.tex
+++ b/Poiseuille.tex
@@ -55,7 +55,7 @@ u_x=6 \bar{u} \,  \frac{y}{L} \left( 1- \frac{y}{L}\right).
 
 \subsection{Temperature}
 
-As in Couette planar flow, \ref{sec:}, the temperature equation
+As in Couette planar flow, \ref{sec:Couette}, the temperature equation
 reduces to
 \[
 0 =  k \frac{\partial^2 T}{\partial y^2} +
@@ -79,7 +79,7 @@ or
  \frac{\partial^2 T^*}{\partial y^{*2}} = 
   - 36 \mathrm{Br} \left( 1- 2 y^*  \right)^2 ,
 \]
-where the  Brinkman number is again as in Eq. \ref{eq:}
+where the Brinkman number is again as in Eq. \ref{eq:Brinkman}
 \[
 \mathrm{Br} =
 \frac{ \mu \bar{u}^2 }{ \kappa T_0 } .
@@ -133,9 +133,8 @@ and the mean velocity,
 
 \subsection{Temperature}
 
-
-At variance with planar flows, \ref{sec:}, the temperature equation
-must be written in polar coordinates:
+At variance with planar flows, the temperature equation must be
+written in polar coordinates:
 \[
 0 =
 k
@@ -171,7 +170,7 @@ or
 \right] =
 - 16 \mathrm{Br}  r^{*2},
 \]
-where the  Brinkman number is as in Eq. \ref{eq:}.
+where the  Brinkman number is as in Eq. \ref{eq:Brinkman}.
 In order to solve it, we change it to
 \[
  \frac{d}{dr^*}
