--- a/chapter_viscous.tex
+++ b/chapter_viscous.tex
@@ -3,10 +3,12 @@
 
 \chapter{Navier-Stokes equations}
 
-\section{Kinematics of a particle}
 \input{particle}
 
 \input{NS}
+
+\input{NS_exercises}
+
 
 \chapter{The energy equation}
 \input{NS_energy}
@@ -19,7 +21,6 @@
 \input{Taylor_Green}
 
 \input{sound_waves_att}
-
 
 \input{NS_solutions_exercises}
 
