--- a/continuity.tex
+++ b/continuity.tex
@@ -124,9 +124,11 @@ be equal. This fact leads to the same expression as before.
 
 
 \subsection{Incompressibility}
-\index{incompressibility}
-By ``incompressibility'', it could be meant that variations in $\rho$
-(spatial or temporal) are negligible. Continuity then readily implies:
+\label{sec:incompressibility}
+
+By ``incompressibility''\index{incompressibility}, it could be meant
+that variations in $\rho$ (spatial or temporal) are
+negligible. Continuity then readily implies:
 \[
 \nabla \cdot  \bfu  = 0 ,
 \]
