--- a/fluid_mechanics.bib
+++ b/fluid_mechanics.bib
@@ -148,3 +148,52 @@ revision="W Kranz, 1952"
  }
 
 
+ @misc{wiki:AM,
+   author = "{Wikipedia contributors}",
+   title = "Acoustic Microscopy ---
+                  {W}ikipedia{,} The Free Encyclopedia",
+   year = "2018",
+   url = "https://en.wikipedia.org/wiki/Acoustic Microscopy",
+   note = "[Online; accessed 29-November-2018]"
+ }
+
+
+@misc{wiki:SLoSA,
+   author = "{Wikipedia contributors}",
+   title = "Stokes's law of sound attenuation ---
+                  {W}ikipedia{,} The Free Encyclopedia",
+   year = "2018",
+   url = "https://en.wikipedia.org/wiki/Stokes's_law_of_sound_attenuation",
+   note = "[Online; accessed 29-November-2018]"
+ }
+
+
+@article{duque2018,
+  title={Particle method for phase separation on membranes},
+  author={Duque, Daniel},
+  journal={Microfluidics and Nanofluidics},
+  volume={22},
+  number={9},
+  pages={95},
+  year={2018},
+  publisher={Springer Berlin Heidelberg}
+}
+
+
+
+
+
+@article{cramer,
+author = {Cramer,M. S. },
+title = {Numerical estimates for the bulk viscosity of ideal gases},
+journal = {Physics of Fluids},
+volume = {24},
+number = {6},
+pages = {066102},
+year = {2012},
+}
+doi = {10.1063/1.4729611},
+
+URL = {       https://doi.org/10.1063/1.4729611},
+eprint = {        https://doi.org/10.1063/1.4729611 }
+
