--- a/glossary.tex
+++ b/glossary.tex
@@ -41,7 +41,8 @@
 \glsxtrnewsymbol[description={second viscosity coefficient}]{lambda}{$\lambda$}
 \glsxtrnewsymbol[description={volume viscosity coefficient}]{zeta}{$\zeta$}
 
-\glsxtrnewsymbol[description={strain rate tensor}]{epsilon}{$\epsilon$}
+\glsxtrnewsymbol[description={strain rate tensor, specific energy,
+Levi-Civita symbol}]{epsilon}{$\epsilon$}
 \glsxtrnewsymbol[description={shear stress tensor}]{tau}{$\tau$}
 
 \glsxtrnewsymbol[description={velocity potential, azimuthal angle in cylindrical and spherical coordinates}]{phi}{$\phi$}
