--- a/gravity_waves.tex
+++ b/gravity_waves.tex
@@ -6,6 +6,7 @@ have. \hfill (Richard Feynman, \textit{The Feynman Lectures on Physics})
 \end{quote}
 
 \section{Gravity waves}
+\label{sec:gravity_waves}
 
 Large waves, like those at the ocean, are driven by gravity. An
 initial perturbation on the water surface, like an elevation, will
@@ -150,13 +151,13 @@ role whatsoever, despite claims at the beginning of this chapter about
 this factor being the driving force behind this process.
 
 In order to find the missing link, let us remember our previous
-expression for the Bernoulli principle, Eq.~\ref{eq:Bern_unsteady},
-which can be written as
+expression for the Bernoulli principle, Eq.~\ref{eq:Bern_unsteady}.
+With no vorticity, it reads
 \[
 \frac{\partial \bfu}{\partial t} +
 \nabla \cdot \left[
   \frac12 u^2 + \frac{p}{\rho} + \varphi
-  \right] =  \frac{p}{\rho}\nabla \cdot \bfu .
+  \right] =  \frac{p}{\rho^2}\nabla \cdot \bfu .
 \]
 
 In our case the fluid is incompressible, so the right hand side
