--- a/harbingers.tex
+++ b/harbingers.tex
@@ -233,14 +233,14 @@ which then increases as the root square of $\nu$, and decreases as,
 basically, the root square of the velocity far away from the wall
 (through $B$).
 
-To get some numbers, if air approaches a \SI{10}{\centi\meter} diameter
-cylinder at $u_0=\SI{10}{\meter\per\second}$, then
+To get some numbers, if air approaches a \SI{10}{\centi\meter}
+diameter cylinder at $u_0=\SI{10}{\meter\per\second}$, then
 $B = 4u_0/D =\SI{400}{\per\second}$ (there is a factor of $4$
-involved, see \cite{white} \S 7.3 ). With
+involved, see \cite{white1991viscous} \S 7.3 ). With
 $\nu\approx\SI{1.5e-5}{\meter\squared\per\second}$, we get
-$\delta = \SI{0.12}{\milli\meter}$, a very thin layer. The thickness of
-the layer can be defined in other ways, for example as the distance at
-which $f'(y) \approx 0.99 $ (so that the value of $u_x = B x f'$ is
+$\delta = \SI{0.12}{\milli\meter}$, a very thin layer. The thickness
+of the layer can be defined in other ways, for example as the distance
+at which $f'(y) \approx 0.99 $ (so that the value of $u_x = B x f'$ is
 $99\%$ its potential solution value, $B x$.) This yields
 $\approx 2.4 \ell$, which is about $3.7$ times larger than
 $\delta$. Still, only approximately $ \SI{0.44}{\milli\meter}$, beyond
@@ -287,8 +287,8 @@ p = -\frac{1}{2} \left[
   u_y^2
   \right]  - \nu B f' ,
  \]
- where in the last equality it is shown how the pressure is not so
- different from the potential solution, Eq. \ref{eq:}.
+ where the last equality shows that the pressure is not so different
+ from the potential solution, Eq. \ref{eq:p_stag_pot}.
 %
  Notice it is not $u_X$ which features, but rather $u_x/f'$, which
  does tend to the $u_x$ away from the wall. An additional, viscous
