--- a/vorticity.tex
+++ b/vorticity.tex
@@ -1,5 +1,5 @@
 \section{Vorticity}
-\label{sec:Euler_vort}
+\label{sec:Euler_vorticity}
 
 The momentum equation \ref{eq:Euler_momentum} is still quite daunting
 due to its nonlinear term in the convective derivative.
