--- a/Euler_exercises.tex
+++ b/Euler_exercises.tex
@@ -1,8 +1,8 @@
-
 \section{Exercises}
+\label{sec:Euler_exercises}
 
 \begin{enumerate}
-\item \label{ex:vector_identity}) Prove that
+\item \label{ex:vector_identity} Prove that
 \[
 \bfu \times ( \nabla\times \bfq) =
 %\frac12
@@ -12,13 +12,13 @@ for any two vector fields. By $\nabla_\bfq $ it is meant that the
 gradient is applied only on $\bfq$ (Feyman's subscript notation).
 Hint: the curl of a field is associated with a tensor with elements:
 \[
-\overline{( \nabla\times\bfq )_{ij}} =
-\left(
-\frac{\partial q_j}{\partial x_i} -
-\frac{\partial q_i}{\partial x_j}
-\right) \qquad
-\overline{( \nabla\times\bfq )_{ij}} =
-\sum_k \epsilon_{ijk}  ( \nabla\times\bfq )_k .
+  \overline{( \nabla\times\bfq )_{ij}} =
+  \left(
+    \frac{\partial q_j}{\partial x_i} -
+    \frac{\partial q_i}{\partial x_j}
+  \right) \qquad
+  \overline{( \nabla\times\bfq )_{ij}} =
+  \sum_k \epsilon_{ijk}  ( \nabla\times\bfq )_k .
 \]
 In the latter, $\epsilon$ is a rank-three tensor, the totally
 antisymmetric tensor (also known as the Levi-Civita symbol).  If this
@@ -31,7 +31,7 @@ This tensor appears also in the vector product:
 (\bfu\times\bfq)_i= \sum_{j,k} \epsilon_{ijk} u_j q_k .
 \]
 These two results make the demonstration quite simple. We will
-also be using these expressions in section \ref{sec:}, when
+also be using these expressions in section \ref{sec:particle}, when
 we talk about rotations of a particle.
 
 \end{enumerate}
