--- a/NS_energy.tex
+++ b/NS_energy.tex
@@ -76,7 +76,8 @@ Dividing by the mass of the particle,
 \rho \frac{d \epsilon }{dt}  = 
  \nabla\cdot ( \tau \cdot  \bfu ) - \nabla\cdot\bfq .
 \end{equation}
-(In this equation, $\epsilon=E/M$, as in \ref{}, not the strain rate.)
+(In this equation, $\epsilon=E/M$, as in \ref{eq:specific_energy}, not
+the strain rate.)
 
 The term $\nabla\cdot ( \tau \cdot \bfu )$ may be written applying the
 chain rule carefully:
@@ -85,17 +86,18 @@ chain rule carefully:
   \tau : \nabla\bfu + \bfu\cdot(\nabla\cdot\tau) ,
 \label{eq:nabla_tau_u}
 \end{equation}
-where ``$:$'' means a total reduction of two tensors, $a:b=\sum_{ij}
-a_{ij} b_{ij} $, and $\nabla\bfu$ is the tensor with components
-$\partial u_i/\partial x_j$ (as introduced in the Euler
-equation \ref{eq:Euler_2}).
+where ``$:$'' means a total reduction of two tensors,
+$a:b=\sum_{ij} a_{ij} b_{ij} $, and $\nabla\bfu$ is the tensor with
+components $\partial u_i/\partial x_j$ (as introduced in Equation
+\ref{eq:nabla_u_def} in the context of convective acceleration.)
 
 We now just follow the steps already employed when deriving the energy
-equation for an inviscid fluid (Eqs \ref{eq:}).  The $\nabla\cdot\tau$
-appears in the general Navier-Stokes momentum equation \ref{eq:NS}:
+equation for an inviscid fluid (Eqs \ref{eq:Euler_energy} and
+\ref{eq:Euler_energy_w_q}).  The $\nabla\cdot\tau$ appears in the
+general Navier-Stokes momentum equation \ref{eq:NS}:
 \[
- \nabla \cdot \tau =
-\rho \left( \frac{d\bfu }{dt}    - \bfg \right) .
+  \nabla \cdot \tau =
+  \rho \left( \frac{d\bfu }{dt}    - \bfg \right) .
 \]
 
 Therefore,
@@ -115,8 +117,9 @@ expressed as a law for the specific internal energy:
 \rho \frac{d e }{dt}  = 
   \tau : \nabla\bfu - \nabla\cdot\bfq .
 \]
-This looks more similar to \ref{eq:} for an ideal fluid if we split the
-stress tensor into the pressure diagonal and the rest:
+This looks more similar to \ref{eq:Euler_energy_w_q} for an ideal
+fluid if we split the stress tensor into the pressure diagonal and the
+rest:
 \[
 \tau = \tau' - p \eye \qquad \implies \qquad
  \tau' : \nabla\bfu = \tau' : \nabla\bfu - p \divu ,
