--- a/potential_flow.tex
+++ b/potential_flow.tex
@@ -54,7 +54,7 @@ boundary condition, in which the velocity would be zero at the surface
 
 Given the latter condition is somewhat more complex than the first
 one, it is best to switch to polar coordinates. In
-Annex \ref{annex:diff} we can find the expression for the gradient:
+this system, the gradient is:
 \begin{align}
 u_r &= \frac{\partial\phi}{\partial r}\\
 u_\theta &= \frac{1}{r} \frac{\partial\phi}{\partial \theta}\\
@@ -77,7 +77,7 @@ large. Also, the angular function $g$ must clearly be
 $\cos\theta$. Otherwise, it will be unable to cancel the $u_0
 r \cos(\theta)$ term. Lastly, it must itself be a solution of the
 Laplace equation. With the Laplacian operator in
-Annex \ref{annex:diff},
+polar coordinates:
 \[
 \nabla^2 (f \cos(theta ) ) =
 \frac{ \cos(theta ) }{r} \frac{\partial r f}{\partial r} -
@@ -440,12 +440,13 @@ p= p_0 + \frac{\rho}2   \left(u_0^2 -  \left[ 2  u_0 \sin(\theta) - \frac{\Gamma
 where we single out the only term that can produce a contribution to the lift.
 
 Now,
-\[
-L= \mathbf{F} \cdot \bhe_x = \int_0^H \int_0^{2\pi}
-p(\theta) \sin(\theta) R d\theta dz =
-2 L  \rho u_0  R  \frac{\Gamma}{2\pi R}   \int_0^{2\pi}  \sin^2(\theta) d\theta =
- H \rho u_0   \Gamma .
-\]
+\begin{equation}
+  \label{eq:lift_potential_cyl}
+  L= \mathbf{F} \cdot \bhe_x = \int_0^H \int_0^{2\pi}
+  p(\theta) \sin(\theta) R d\theta dz =
+  2 L  \rho u_0  R  \frac{\Gamma}{2\pi R}   \int_0^{2\pi}  \sin^2(\theta) d\theta =
+  H \rho u_0   \Gamma .
+\end{equation}
 Therefore, the lift per unit length is $L/H= \rho u_0 \Gamma$. It is
 interesting that heavier fluids, high speeds and high $\Gamma$ produce
 higher lift forces.
@@ -489,7 +490,7 @@ pushes our vehicle, magically making our journey a costless one!).
 \end{figure}
 
 
-\subsection{Flow past a sphere}
+\section{Flow past a sphere}
 
 With the same assumption of potential flow as in the cylinder, the
 axisymmetric flow past a sphere may be tackled by using the potential,
@@ -545,7 +546,7 @@ u_\theta &=  -u_0
 \end{align*}
 
 
-\subsubsection{Streamlines past a sphere}
+\subsection{Streamlines past a sphere}
 
 For axisymmetric flows, streamlines may be defined on a plane, since
 the resulting flow does not depend on the azimuthal angle (the angle
@@ -567,8 +568,23 @@ i.e. it is purely azimuthal. It is also divergence-free, so that is
 satisfies Laplace's equation for a curl-free flow.
 
 However, the choice of $A=\psi$ does \emph{not} result in the correct
-stream-line behavior of Eq.  \ref{eq:stream_perp_to_u}. The following
-choice, however, does:
+stream-line behavior of Eq.  \ref{eq:stream_perp_to_u}.
+
+
+
+In axisymmetric flow,
+\[
+  \divu =
+  {1 \over r^2}{\partial \left( r^2 u_r \right) \over  \partial r} +
+  {1 \over r\sin\theta}{\partial \over \partial  \theta} \left( u_\theta\sin\theta \right) ,
+\]
+but an equivalent expression is
+\[
+  \divu =
+  {\partial \left( r^2 u_r \sin\theta \right) \over  \partial r} +
+  {\partial \left( r u_\theta\sin\theta \right)  \over \partial  \theta}
+\]
+so continuity is trivially satisfied with the choice
 \begin{equation}
   \label{eq:Stokes_stream_spherical}
   \bfA = \frac{\psi(r,\theta)}{r \sin\theta } \bhe_\phi .    
@@ -578,8 +594,15 @@ This $\psi$ is called ``Stokes' stream function''\index{Stokes' stream
   function}, but there is no fundamental difference with the usual,
 2D, stream function.
 
-The resulting velocity field for spherical coordinates is then found
-to be
+
+
+From the curl in spherical coordinates,
+\begin{align}
+  u_r     &= \frac {1}{r\sin \theta }
+            \frac{ \left( \partial A  \sin \theta \right) }{\partial \theta }  \\
+  u_\theta &= -\frac1{r} \frac{\partial (rA) }{\partial r} 
+\end{align}
+thus we find
 \begin{equation}
   \label{eq:u_from_psi_spherical}
   \begin{split}
@@ -588,13 +611,17 @@ to be
   \end{split}
 \end{equation}
 
+
 For completeness, in cylindrical coordinates the appropriate
 expression is
 \[
   \bfA = \frac{\psi(\rho, z)}{ \rho } \bhe_\phi ,
 \]
-where $\rho$ is the distance to the $z$ axis. The
-resulting velocity field is
+where $\rho$ is the distance to the $z$ axis. Notice this is the same
+expression as in spherical coordinates, since $\rho=r\sin\theta$.
+
+
+The resulting velocity field is
 \begin{equation*}
   \begin{split}
     u_\rho   &= - \frac1{\rho} \frac{\partial \psi}{\partial z} \\
@@ -614,7 +641,7 @@ found to be
   \right] \sin^2\theta .
 \end{equation}
 Again, this is found by working backwards from the known solution.
-See Exercise \ref{ex:u_from_psi_spher}) to derive the velocity field
+See Exercise \ref{ex:u_from_psi_sphere}) to derive the velocity field
 from $\psi$.
 
 In Fig. \ref{fig:potential_streamlines_sphere} these streamlines are
@@ -644,6 +671,7 @@ sphere are in Fig. \ref{fig:potential_streamlines_moving_sphere}.
   potential flow around a cylinder from $\psi$, solving Laplace's
   equation, plus the appropriate boundary conditions.
 
+  
 \item \label{ex:u_from_psi_sphere} Derive the velocity field for
   potential flow around a sphere from $\psi$, solving Laplace's
   equation, plus the appropriate boundary conditions. Notice that
@@ -676,43 +704,4 @@ sphere are in Fig. \ref{fig:potential_streamlines_moving_sphere}.
 \end{itemize}
 
 
-%FOR POTENTIAL.TEX:
 
-
-
-
-In axisymmetric flow,
-\[
-  \divu =
-  {1 \over r^2}{\partial \left( r^2 u_r \right) \over  \partial r} +
-  {1 \over r\sin\theta}{\partial \over \partial  \theta} \left( u_\theta\sin\theta \right) ,
-\]
-but an equivalent expression is
-\[
-  \divu =
-  {\partial \left( r^2 u_r \sin\theta \right) \over  \partial r} +
-  {\partial \left( r u_\theta\sin\theta \right)  \over \partial  \theta}
-\]
-
-so continuity is trivially satisfied with the choice
-\ref{eq:u_from_psi_spherical}.
-
-
-From the curl in spherical coordinates,
-\begin{align}
-  u_r     &= \frac {1}{r\sin \theta }
-            \frac{ \left( \partial A  \sin \theta \right) }{\partial \theta }  \\
-  u_\theta &= -\frac1{r} \frac{\partial (rA) }{\partial r} 
-\end{align}
-and we find
-\begin{equation}
-%  \label{eq:u_from_psi_spherical}
-  \begin{split}
-    u_r     &=  \frac1{r^2 \sin\theta} \frac{\partial \psi}{\partial \theta} \\
-    u_\theta &= -\frac1{r   \sin\theta} \frac{\partial \psi}{\partial r}
-  \end{split}
-\end{equation}
-
-
-
-Notice $A=\psi / \rho $ also in spherical coordinates !
